--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_fonts: ^0.3.10
   material_design_icons_flutter: ^4.0.5045
   provider: ^4.0.4
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
